<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity"
    android:background="@color/SkyBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ocr_header"
        android:id="@+id/status_message"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:background="@color/FloralWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_value"
        android:layout_below="@+id/status_message"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:layout_alignEnd="@+id/status_message" />

    <Button
        android:id="@+id/read_text"
        android:layout_width="116dp"
        android:layout_height="105dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="3dp"
        android:layout_toStartOf="@+id/use_flash"
        android:text="@string/read_text" />

    <Switch
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="79dp"
        android:checked="true"
        android:text="@string/auto_focus" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignEnd="@+id/text_value"
        android:checked="false" />

</RelativeLayout>
